  version 2.10.1. Apache xmlgraphics Batik updated to 1.16. Apache PDFBox updated to 
  2.0.27. Apache Tika upgraded to 2.7.0. Log4j updated to 2.20. jAudiotagger updated to 
  3.0.1. ImageIO updated to 3.9.4. Jetty updated to 11.0.14. Jakarta Faces updated to 
  4.0.1. Jakarta Platform updated to 10.0.0. SLF4J API Module updated 2.0.6. Jakarta 
  Servlet updated to 6.0. 

[To Do]
- Add composers + query with online searches
- Merge items (from sub modules)
- Switch key values on for all modules - settings for default modules
- Add MovieMeter
- Retest PDF box
- Retest audio tagger.
- Move help to online.
- Finish the synch server.


-----------------------------------------------------------------------------------------
Data Crow version 4.7.0                                            Released on 2023-03-02
-----------------------------------------------------------------------------------------
Data Crow 4.7 brings an much better look and feel, new online services (archive.org and
OpenLibrary.org) and a very much improved handling of item to item relationships.

[New]
- Archive.org software online book, software and movie search.
- Open Library (openlibrary.org) online book search. The online search fetches 
  edition information and work information.
- Added a new Look and Feel: FlatLaf Light. This is a more modern Look and Feel which is
  still actively developed (https://www.formdev.com/flatlaf/)
  This will be the default Look and Feel for Data Crow from now on (for new installations).
  Find it in Settings > Look and Feel
  Note that on upgrading the system will automatically switch to this skin.

[Changed]
- Now allowing for references to be made to main modules without removing the referenced
  module from the module menu.
  (https://datacrow.org/2023/02/17/relating-items-what-data-crow-4-7-will-bring-to-you/)
- Now allowing users to alter a module to create a reference to the module itself; 