@@ -1,2 +1,2 @@
 #2023-02-17
-version=1.6.0
+version=1.7.0
